# ConwayGame

./: CMakeLists.txt  LICENSE  main.cpp
src/: Board.cpp  Board.hpp  Coordinates.hpp  Engine.cpp  Engine.hpp
